--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -86,4 +86,4 @@ cas.server.url=http://127.0.0.1:8180/cas
 cas.project.url=http://127.0.0.1:8080/sun
 
 #\u9879\u76EE\u6240\u5728\u7684\u4F4D\u7F6E
-srcPath=F\:\\PenguinFrameworkExtra\\sun
+srcPath=F\:\\PenguinFramework\\IdeaProjects\\sun
